# caffeine-cosmic

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  install.sh  install_manual.sh  justfile  uninstall_generated.sh
.github/workflows/: ci.yml
assets/: caffeine.desktop
i18n/en/: cosmic_caffeine.ftl
resources/: app.desktop
src/: app.rs  i18n.rs  main.rs  notify.rs  service.rs  state.rs
